# family_mirror

./: README.md  agents.md  config.yaml  pyproject.toml  requirements.txt
data/input/: sample_family_conversation.m4a  sample_family_conversation_reference.md
data/reports/: sample_family_conversation.merged.mapped.communication.md  sample_family_conversation.report.md
data/transcripts/: sample_family_conversation.merged.json  sample_family_conversation.merged.mapped.json  sample_family_conversation.merged.mapped.metrics.json  sample_family_conversation.segments.json  sample_family_conversation.speakers.json  sample_family_conversation.speech_segments.json  sample_overlap.merged.events.json  sample_overlap.merged.json
scripts/: create_sample_conversation.ps1  create_sample_conversation.py
src/: __init__.py  main.py  storage.py
src/alignment/: __init__.py  align_segments.py
src/analysis/: __init__.py  interruptions.py  metrics.py  safety_rules.py
src/audio/: __init__.py  convert.py  vad.py
src/reporting/: __init__.py  report_markdown.py
src/speakers/: __init__.py  mapping.py
src/transcription/: __init__.py  whisper_transcriber.py
src/utils/: config.py  timecodes.py
tests/: test_alignment.py  test_interruptions.py  test_metrics.py  test_reference_transcript.py  test_report_markdown.py  test_safety_rules.py  test_speaker_mapping.py  test_timecodes.py  test_vad.py
